--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:url" content="https://mindpadonline.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mindpad">
+  <meta property="og:description" content="Clear your thoughts.">
+  <meta property="og:image" content="https://mindpadonline.vercel.app/og.png">
+  <meta property="og:image:alt" content="Mindpad">
   <title>Mindpad — Clear your thoughts</title>
 </head>
 
